# @autocargo from //hphp/hack/src:hh_compile
# Signature<<c191439cee1c126601dfc11795dc4cb0572e86f6>>
[package]
name = "hh_compile"
edition = "2018"
version = "0.0.0"
include = ["hh_compile.rs"]

[[bin]]
name = "hh_compile"
path = "hh_compile.rs"

[dependencies]
compile_rust = { path = "hhbc" }
options = { path = "hhbc/cargo/options" }
oxidized = { path = "oxidized" }
itertools = "*"
structopt = "*"
walkdir = "*"
# @end of Signature<<c191439cee1c126601dfc11795dc4cb0572e86f6>>
