# @autocargo from //hphp/hack/src:hh_compile
# Signature<<57b6040129c75d23a0e20e46321abbb083fbc7bd>>
[package]
name = "hh_compile"
edition = "2018"
version = "0.0.0"
include = ["hh_compile.rs"]

[[bin]]
name = "hh_compile"
path = "hh_compile.rs"

[dependencies]
compile_rust = { path = "hhbc/cargo/compile" }
options = { path = "hhbc/cargo/options" }
oxidized = { path = "oxidized" }
itertools = "*"
structopt = "*"
walkdir = "*"
# @end of Signature<<57b6040129c75d23a0e20e46321abbb083fbc7bd>>
