[workspace]
resolver = "2"
members = [
    "arena_collections",
    "arena_trait",
    "asdl_to_rust/lrgen",
    "client/ide_service/cargo/rust_batch_index_ffi",
    "custom_error/cargo/custom_error_config_ffi",
    "decl/cargo/rust_decl_ffi",
    "decl/direct_decl_smart_constructors",
    "deps/cargo/deps_rust",
    "deps/cargo/deps_rust_ffi",
    "deps/cargo/typing_deps_hash",
    "hackc/bytecode_printer",
    "hackc",
    "hackc/compile/cargo/closure_convert",
    "hackc/compile/cargo/compile",
    "hackc/compile/cargo/options",
    "hackc/compile/cargo/rewrite_program",
    "hackc/compile/cargo/rewrite_xml",
    "hackc/emitter/cargo/emit_pos",
    "hackc/emitter/cargo/emit_type_hint",
    "hackc/emitter/cargo/emit_unit",
    "hackc/emitter/cargo/env",
    "hackc/emitter/cargo/global_state",
    "hackc/emitter/cargo/instruction_sequence",
    "hackc/emitter/cargo/label_rewriter",
    "hackc/emitter/cargo/statement_state",
    "hackc/hhbc/cargo/dump-opcodes",
    "hackc/hhbc/cargo/hhbc",
    "hackc/ffi_bridge",
    "hackc/emitter/cargo/constant_folder",
    "hackc/emitter/cargo/scope",
    "hackc/hhvm_cxx/hhvm_hhbc_defs",
    "hackc/utils/cargo/hhbc_string_utils",
    "hackc/utils/cargo/stack_depth",
    "hackc/utils/cargo/unique_id_builder",
    "heap",
    "hh_codegen",
    "hh_fanout/cargo/hh_fanout_build_rust",
    "hh_fanout/cargo/hh_fanout_dep_graph_is_subgraph_rust",
    "hh_fanout/cargo/hh_fanout_dep_graph_stats_rust",
    "hh_naming_table_builder/cargo/naming_table_builder_ffi",
    "naming",
    "naming/cargo/elab_ffi",
    "naming/cargo/elaborate_namespaces",
    "naming/cargo/naming_attributes",
    "naming/names_rust",
    "ocamlrep_marshal/cargo/ocamlrep_marshal_ffi_bindings",
    "oxidized",
    "oxidized_by_ref",
    "package/cargo",
    "package/ffi_bridge",
    "package/ocaml_ffi/cargo",
    "parser/api/cargo/cst_and_decl_parser",
    "parser/api/cargo/decl_mode_parser",
    "parser/api/cargo/direct_decl_parser",
    "parser/api/cargo/positioned_by_ref_parser",
    "parser/api/cargo/positioned_full_trivia_parser",
    "parser/api/cargo/positioned_parser",
    "parser/api/cargo/rescan_trivia",
    "parser/cargo/aast_parser",
    "parser/cargo/aast_parser_ffi",
    "parser/cargo/bench",
    "parser/cargo/core_types",
    "parser/cargo/decl_mode_parser",
    "parser/cargo/errors",
    "parser/cargo/flatten_smart_constructors",
    "parser/cargo/hh_autoimport",
    "parser/cargo/mode_parser",
    "parser/cargo/namespaces",
    "parser/cargo/operator",
    "parser/cargo/pair_smart_constructors",
    "parser/cargo/positioned_by_ref_parser_ffi",
    "parser/cargo/positioned_smart_constructors",
    "parser/cargo/rust_aast_parser_types",
    "parser/cargo/rust_parser_errors_ffi",
    "parser/cargo/rust_parser_ffi",
    "parser/cargo/smart_constructors",
    "parser/cargo/syntax_smart_constructors",
    "parser/cargo/to_ocaml_impl",
    "parser/core",
    "parser/ffi_bridge",
    "parser/lowerer",
    "parser/schema",
    "providers/cargo/decl_provider_rust",
    "shmffi/cargo/shmffi",
    "utils/arena_deserializer",
    "utils/config_file/rust/ffi",
    "utils/core",
    "utils/eq_modulo_pos",
    "utils/eq_modulo_pos_derive",
    "utils/escaper",
    "utils/ffi_cbindgen",
    "utils/find_utils",
    "utils/hash",
    "utils/hh24_types",
    "utils/html_entities",
    "utils/html_entities/test",
    "utils/intern",
    "utils/line_break_map",
    "utils/lint",
    "utils/multifile",
    "utils/no_pos_hash",
    "utils/no_pos_hash/derive",
    "utils/ocaml_helper",
    "utils/ocaml_runtime",
    "utils/perf/cargo/profile",
    "utils/perf/cargo/stats",
    "utils/rust/measure/ffi",
    "utils/stack_limit",
    "utils/test",
    "utils/test/arena_deserializer",
]
